  for :class:`RS4`

- Vector-like objects now in a module :mod:`rpy2.robjects.vectors`

- :func:`set_accessors` for adding simply accessors to a class inheriting
  from :class:`RS4`

- :class:`RS4_Type` for metaclass-declared accessors

- Delegating classes :class:`ExtractDelegator` and 
  :class:`DoubleExtractDelegator` for extracting the R-way

- :class:`DataFrame` (formerly *RDataFrame*) can now be created from :`rlike.container.OrdDict`
  instances, or any other object inheriting from dict.

- :class:`FactorVector` to represent R factors

- the conversion is now returning subclasses of
  :class:`robjects.vectors.Vector` -formerly *RVector*-
  (such as :class:`IntVector`, 
  :class:`FloatVector`, etc...) rather than only return :class:`Vector`

- :class:`StrVector` has a method :meth:`factor` to turn a
  vector of strings into an R factor

- :class:`Matrix` was added the methods: :meth:`dot`, :meth:`svd`, :meth:`crossprod`,
  :meth:`tcrossprod`, :meth:`transpose`.
 
- :meth:`IntVector.tabulate` to count the number of times a value is found in the vector

- :meth:`Vector.sample` to draw a (random) sample of arbitrary size from a vector

- :data:`NA_bool`, :data:`NA_real`, :data:`NA_integer`, :data:`NA_character`, 
  :data:`NA_complex` as aliases for R's missing values.

- :data:`ComplexVector` for vectors of complex (real + imaginary) elements

- :mod:`packages` to provide utility functions to handle R packages
  (import of R packages)

- :mod:`functions` to provide classes related to R functions, with the new 
  class :class:`SignatureTranslatedFunction`

:mod:`rpy2.rinterface`:

- New functions for specifying callback functions for R's front-ends:
  :func:`set_showmessage`, :func:`set_flushconsole`,
  :func:`set_choosefile`, :func:`set_showfiles`

- New object :data:`R_MissingArg`, exposing R's special object for representing
  a "missing" parameter in a function call.
  (#this was first a patch by Nathaniel Smith with a function getMissingArgSexp)
